@startuml

entity User {
    * id: Integer [PK]
    * username: Varchar
    * email: Varchar
    * password: Varchar
    * role_id: Integer [FK]
    * is_staff: Boolean
    * is_active: Boolean
    * date_joined: DateTime
}

entity Profile {
    * id: Integer [PK]
    * user_id: Integer [FK]
    * bio: Text
    * phone_number: Varchar
}

entity Role {
    * id: Integer [PK]
    * name: Varchar
    * description: Text
}

entity Permission {
    * id: Integer [PK]
    * name: Varchar
    * description: Text
}

entity Role_Permission {
    * id: Integer [PK]
    * role_id: Integer [FK]
    * permission_id: Integer [FK]
}

User ||--|| Profile : has_one
User }|--|| Role : has_a
Role }|--o{ Role_Permission : contains
Permission }|--o{ Role_Permission : contains

@enduml
